fix: Docker setup, missing imports, and OSS mode compatibility
- Fix Dockerfile to copy scripts directory correctly
- Fix line endings in start_services.sh
- Add alembic.ini configuration file
- Fix PostgreSQL port mapping (5434:5432)
- Make VoiceFX services optional (ImportError handling)
- Remove LLMGeneratedTextFrame import (not in pipecat)
- Fix template creation to handle OSS mode gracefully
- Update docker-compose environment variables for OSS mode

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -54,7 +54,11 @@ ENV PYTHONUNBUFFERED=1
 
 # Copy application code
 COPY ./api ./api
-COPY ./scripts/start_services.sh ./scripts/start_services.sh
+COPY ./scripts ./scripts
+
+# Fix line endings in shell scripts
+RUN sed -i 's/\r$//' ./scripts/start_services.sh && \
+    chmod +x ./scripts/start_services.sh
 
 ENV PYTHONPATH=/app
 
