--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
         max-size: "10m"
         max-file: "3"
     ports:
-      - "5432:5432"
+      - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -47,7 +47,7 @@ services:
       MINIO_ROOT_PASSWORD: minioadmin
       MINIO_API_CORS_ALLOW_ORIGIN: "*"
     ports:
-      - "127.0.0.1:9000:9000" # Bind to localhost explicitly
+      - "127.0.0.1:9000:9000"
       - "127.0.0.1:9001:9001"
     volumes:
       - minio-data:/data
@@ -60,21 +60,17 @@ services:
       - app-network
 
   api:
-    image: ${REGISTRY:-dograhai}/dograh-api:latest
+    # במקום למשוך image מהאינטרנט → נבנה מהקוד שלך
+    build:
+      context: .
+      dockerfile: api/Dockerfile
     volumes:
       - shared-tmp:/tmp
     environment:
-      # Core application config
       ENVIRONMENT: "local"
       LOG_LEVEL: "INFO"
-
-      # Database configuration (using containerized postgres)
       DATABASE_URL: "postgresql+asyncpg://postgres:postgres@postgres:5432/postgres"
-
-      # Redis configuration (using containerized redis)
       REDIS_URL: "redis://:redissecret@redis:6379"
-
-      # Storage configuration - using local MinIO
       ENABLE_AWS_S3: "false"
 
       # MinIO
@@ -84,15 +80,8 @@ services:
       MINIO_BUCKET: "voice-audio"
       MINIO_SECURE: "false"
 
-      # Langfuse
-      ENABLE_TRACING: "false"
-      # LANGFUSE_SECRET_KEY: ""
-      # LANGFUSE_PUBLIC_KEY: ""
-      # LANGFUSE_HOST: "https://langfuse.dograh.com"
-
-      # Sentry
       ENABLE_TELEMETRY: "${ENABLE_TELEMETRY:-true}"
-      SENTRY_DSN: "https://3acdb63d5f1f70430953353b82de61e0@o4509486225096704.ingest.us.sentry.io/4510152922693632"
+      DEPLOYMENT_MODE: "${DEPLOYMENT_MODE:-oss}"
 
     ports:
       - "8000:8000"
@@ -103,8 +92,6 @@ services:
         condition: service_healthy
       minio:
         condition: service_healthy
-      cloudflared:
-        condition: service_started
     healthcheck:
       test:
         [
@@ -119,25 +106,24 @@ services:
       - app-network
 
   ui:
+    # במקום למשוך image → נבנה מהקוד שלך
     build:
       context: .
       dockerfile: ui/Dockerfile
     environment:
-      # Server-side URL (SSR, internal Docker network)
+      NEXT_PUBLIC_BACKEND_URL: "http://api:8000"
       BACKEND_URL: "http://api:8000"
-      NODE_ENV: "oss"
-
-      # Flag to enable/ disable posthog and sentry
+      NODE_ENV: "production"
+      NEXT_PUBLIC_DEPLOYMENT_MODE: "${DEPLOYMENT_MODE:-oss}"
+      NEXT_PUBLIC_AUTH_PROVIDER: "local"
       ENABLE_TELEMETRY: "${ENABLE_TELEMETRY:-true}"
 
-      # Posthog
       POSTHOG_KEY: "phc_ItizB1dP6yv7ZYobbcqrpxTdbomDA8hJFSEmAMdYvIr"
       POSTHOG_HOST: "https://us.posthog.com"
 
-      # Sentry
       SENTRY_DSN: "https://d9387fed5f80e90781f1dbd9b2c0994c@o4509486225096704.ingest.us.sentry.io/4510124708200448"
     ports:
-      - "3010:3010"
+      - "3000:3010"
     depends_on:
       api:
         condition: service_healthy
@@ -159,7 +145,7 @@ services:
     container_name: cloudflared-tunnel
     command: tunnel --no-autoupdate --url http://api:8000 --metrics 0.0.0.0:2000
     ports:
-      - "2000:2000" # Expose metrics endpoint
+      - "2000:2000"
     networks:
       - app-network
 
@@ -167,9 +153,7 @@ volumes:
   postgres_data:
   redis_data:
   minio-data:
-    driver: local
   shared-tmp:
-    driver: local
 
 networks:
   app-network:
